Fix WebKit overlap issue #168

--- a/app/views/index/sidebar/layers.scss
+++ b/app/views/index/sidebar/layers.scss
@@ -83,6 +83,11 @@
                     rgba(0, 0, 0, 1) 80%,
                     rgba(0, 0, 0, 0)
                 );
+
+                // Fix WebKit overlap issue
+                // https://github.com/openstreetmap-ng/openstreetmap-ng/issues/168#issuecomment-3029499779
+                list-style-type: none;
+                overflow-y: hidden;
             }
 
             .show-less {
